syntax = "proto3";

package api;

service Infer {
  rpc Infer(InferRequest) returns (InferResponse) {}
}

message InferRequest {
  uint64 batcher_id = 1;
  bytes compressed_input = 2;
}

message InferResponse {
  enum Status {
    SUCCESS = 0;
    DROP = 1;
  }
  Status status_code = 1;
  bytes raw_output = 2;
}

